--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,7 +15,6 @@ html {
  */
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
@@ -24,6 +23,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- nav {
-   font-family: "Bungee", sans-serif;
+ body {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+ main {
+   padding: 0 5%;
  }
