--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,9 +1,24 @@
 nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: #40569E;
   color: #FFFFFF;
   height: 120px;
   padding: 1.5em;
   font-family: "Bungee", sans-serif;
+}
+
+nav button {
+  background-color: transparent;
+  border: 0;
+  background: none;
+  box-shadow: none;
+  border-radius: 0px;
+  color: #FFFFFF;
+  font-family: "Source Sans Pro";
+}
+
+nav button span {
+  font-weight: 600;
 }
