--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -7,6 +7,7 @@
   background: transparent;
   resize: none;
   border-width: 0 0 3px 0;
+  outline: none;
   border-color: black;
   margin: 1rem 0;
 }
