--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,3 +31,38 @@ body {
  main {
    padding: 0 5%;
  }
+
+ .old-tweet {
+   margin: 2rem 0;
+ }
+
+ main ul {
+   padding: 0;
+   margin: 0;
+ }
+
+ .old-tweet li {
+   list-style: none;
+   margin: 1em;
+   border: 1px solid black;
+   padding: 1em;
+   margin: 1em 0;
+
+ }
+
+ .old-tweet li header {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+ }
+
+.old-tweet article {
+  height: 2em;
+  border-bottom: 2px solid black;
+}
+
+.old-tweet footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
