--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,4 +6,6 @@ body > header {
   flex-direction: column;
   background-color: powderblue;
   background-image: url(../images/headerbg.png);
+  position: relative;
+  top: 120px;
 }
