--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,7 @@
 nav {
+  position: fixed;
+  width: 100%;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: space-between;
