--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,5 @@
 nav {
+  box-sizing: border-box;
   position: fixed;
   width: 100%;
   z-index: 2;
@@ -12,6 +13,11 @@ nav {
   font-family: "Bungee", sans-serif;
 }
 
+#write-tweet {
+  display: flex;
+  flex-direction: column;
+}
+
 nav button {
   background-color: transparent;
   border: 0;
@@ -20,8 +26,22 @@ nav button {
   border-radius: 0px;
   color: #FFFFFF;
   font-family: "Source Sans Pro";
+  margin-top: 2em;
 }
 
 nav button span {
   font-weight: 600;
+}
+
+#write-tweet i {
+  align-self: center;
+  margin: 0 0 1em;
+  color: red;
+  font-size: xx-large;
+  font-weight: 700;
+  transition: 300ms;
+}
+
+#write-tweet:hover i {
+  transform: translate(0, 5px);
 }
