--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -3,12 +3,11 @@
 }
 
 #tweets-container article {
-  list-style: none;
-  margin: 1em;
   border: 1px solid black;
   padding: 1em;
-  margin: 1em 0;
+  margin: 2em 1em;
  }
+
  #tweets-container article:hover {
   box-shadow: 1em 1em 0.5em grey;
 }
@@ -16,8 +15,6 @@
 #tweets-container article header {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
-
 }
 
 .handler {
@@ -34,9 +31,8 @@
   border: none;
   border-bottom: 2px black solid;
   outline: none;
+  padding: 1em;
 }
-
-
 
 #tweets-container footer {
  display: flex;
