--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,6 +6,5 @@ body > header {
   flex-direction: column;
   background-color: powderblue;
   background-image: url(../images/headerbg.png);
-  position: relative;
-  top: 120px;
+  padding: 120px 0 3em 0;
 }
