--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: #40569E;
+  background-color: transparent;
   color: #FFFFFF;
   height: 120px;
   padding: 1.5em;
@@ -28,6 +29,10 @@ nav button {
   color: #FFFFFF;
   font-family: "Source Sans Pro";
   margin-top: 2em;
+}
+
+#write-tweet {
+  cursor: pointer;
 }
 
 nav button span {
