--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -38,9 +38,39 @@ body {
  body {
   font-family: "Source Sans Pro", sans-serif;
   background-color: #F0F8FF;
+  display: flex;
+  flex-direction: column;
 }
 
  main {
    width: 80vw;
    margin: auto;
+ }
+
+ .space {
+   flex-basis: 5em;
+ }
+
+ @media only screen and (min-width: 1024px) {
+   body {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+   }
+   .space {
+     flex-basis: 0;
+   }
+   nav {
+     clear: both;
+   }
+   body > header {
+    width: 33%;
+    margin-top: 25%;
+   }
+   body > .container {
+    margin: auto;
+    margin-top: 120px;
+    width: 60%;
+    float: right;
+   }
  }
