--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,8 +6,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #40569E;
-  background-color: transparent;
+  background-color: #4056A1;
   color: #FFFFFF;
   height: 120px;
   padding: 1.5em;
@@ -29,9 +28,6 @@ nav button {
   color: #FFFFFF;
   font-family: "Source Sans Pro";
   margin-top: 2em;
-}
-
-#write-tweet {
   cursor: pointer;
 }
 
@@ -51,3 +47,16 @@ nav button span {
 #write-tweet:hover i {
   transform: translate(0, 5px);
 }
+
+@media only screen and (max-width: 1024px) {
+  .space {
+    flex-basis: 5em;
+  }
+
+  nav {
+    width: 100%;
+    height: 120px;
+    background-color: powderblue;
+    background-image: url(../images/headerbg.png);
+  }
+ }
