--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -49,14 +49,9 @@ nav button span {
 }
 
 @media only screen and (max-width: 1024px) {
-  .space {
-    flex-basis: 5em;
-  }
-
   nav {
     width: 100%;
     height: 120px;
-    background-color: powderblue;
-    background-image: url(../images/headerbg.png);
+    background-color: transparent;
   }
  }
